--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-sharp": "^2.13.2",
     "gatsby-source-filesystem": "^2.10.0",
+    "gatsby-source-instagram": "^0.9.0",
     "gatsby-transformer-sharp": "^2.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
